k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-trust-demo
  namespace: zero-trust-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zero-trust-demo
  template:
    metadata:
      labels:
        app: zero-trust-demo
    spec:
      serviceAccountName: zero-trust-demo
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: zero-trust-demo:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
